--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-parallel": "^0.4.1",
     "jade": "~1.11.0",
+    "load-grunt-tasks": "^3.3.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "grunt-express-server": "^0.5.1"
   }
 }
