--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -12,14 +12,14 @@
     "express": "~4.13.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-parallel": "^0.4.1",
     "jade": "~1.11.0",
-    "load-grunt-tasks": "^3.3.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "grunt-express-server": "^0.5.1"
+    "grunt-express-server": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-parallel": "^0.4.1",
+    "load-grunt-tasks": "^3.3.0"
   }
 }
