--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "jade": "~1.11.0",
+    "jquery": "^2.1.4",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "grunt-contrib-csslint": "^0.5.0",
