--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jquery": "^2.1.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt-contrib-csslint": "^0.5.0",
